fead: add color css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
-    <button>clic</button>
+    <h1 class="hh">HOLA MUNDO</h1>
+    <button class="but">clic</button>
     <button class="hola">hola</button>
+    <h2 class="h2">MUNDO</h2>
 </body>
 </html>
