--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
+    <h1 class="ho">HOLA MUNDO</h1>
+    <h2 class="ma">MAGOS</h2>
+    <h3 class="ca">CABALLEROS</h3>
+    <h4 class="en">ENANOS</h4>
 </body>
 </html>
