fead: add button css

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h2 class="ma">MAGOS</h2>
     <h3 class="ca">CABALLEROS</h3>
     <h4 class="en">ENANOS</h4>
+    <div class="di">
+        <button class="bot">enlace</button>
+    </div>
 </body>
 </html>
